{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 469,
  "lineage": "0f61b6ad-6466-9008-33c7-7feff92de48f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_vpc_A_subnet_AZ1_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c3bb09078f1ee663",
            "association_id": "eipassoc-0ecfef870208e3f26",
            "domain": "vpc",
            "id": "eipalloc-0c3bb09078f1ee663",
            "instance": "i-0fca44b9acfc68af7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b4f432f834f5ec30",
            "private_dns": "ip-10-0-0-117.ec2.internal",
            "private_ip": "10.0.0.117",
            "public_dns": "ec2-3-212-181-71.compute-1.amazonaws.com",
            "public_ip": "3.212.181.71",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.app-server_for_VPC_A_subnet_AZ1",
            "aws_internet_gateway.internet_gateway_for_VPC_A",
            "aws_security_group.security_group_for_VPC_A_instance",
            "aws_subnet.vpc_A_subnet_AZ1",
            "aws_vpc.vpc_A_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_vpc_B_subnet_AZ1_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064d7cd47d44aa9c2",
            "association_id": "eipassoc-058a1b4691bb4e17f",
            "domain": "vpc",
            "id": "eipalloc-064d7cd47d44aa9c2",
            "instance": "i-053937bd51e80576f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06797cbc3a42b6a9e",
            "private_dns": "ip-10-1-0-214.ec2.internal",
            "private_ip": "10.1.0.214",
            "public_dns": "ec2-18-205-71-60.compute-1.amazonaws.com",
            "public_ip": "18.205.71.60",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.app-server_for_VPC_B_subnet_AZ1",
            "aws_internet_gateway.internet_gateway_for_VPC_B",
            "aws_security_group.security_group_for_VPC_B_instance",
            "aws_subnet.vpc_B_subnet_AZ1",
            "aws_vpc.vpc_B_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_vpc_C_subnet_AZ1_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e73163cb95a23ea",
            "association_id": "eipassoc-0d9e8003a0cb9ec5c",
            "domain": "vpc",
            "id": "eipalloc-02e73163cb95a23ea",
            "instance": "i-0949bc2422968b916",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09cdac7d711b46b66",
            "private_dns": "ip-10-2-0-48.ec2.internal",
            "private_ip": "10.2.0.48",
            "public_dns": "ec2-52-72-203-149.compute-1.amazonaws.com",
            "public_ip": "52.72.203.149",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.app-server_for_VPC_C_subnet_AZ1",
            "aws_internet_gateway.internet_gateway_for_VPC_C",
            "aws_security_group.security_group_for_VPC_C_instance",
            "aws_subnet.vpc_C_subnet_AZ1",
            "aws_vpc.vpc_C_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server_for_VPC_A_subnet_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0729e439b6769d6ab",
            "arn": "arn:aws:ec2:us-east-1:576516118645:instance/i-0fca44b9acfc68af7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-0fca44b9acfc68af7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b4f432f834f5ec30",
            "private_dns": "ip-10-0-0-117.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.117",
            "public_dns": "ec2-3-212-181-71.compute-1.amazonaws.com",
            "public_ip": "3.212.181.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07c4d65e140fe4639",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e78f22512749e8c",
            "tags": {
              "Name": "app_server-for_VPC_A"
            },
            "tags_all": {
              "Name": "app_server-for_VPC_A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ddffcef654a5329"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.security_group_for_VPC_A_instance",
            "aws_subnet.vpc_A_subnet_AZ1",
            "aws_vpc.vpc_A_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server_for_VPC_B_subnet_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0729e439b6769d6ab",
            "arn": "arn:aws:ec2:us-east-1:576516118645:instance/i-053937bd51e80576f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-053937bd51e80576f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06797cbc3a42b6a9e",
            "private_dns": "ip-10-1-0-214.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.214",
            "public_dns": "ec2-18-205-71-60.compute-1.amazonaws.com",
            "public_ip": "18.205.71.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-021c04f48434c2988",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a902fc05825a506f",
            "tags": {
              "Name": "app_server_for_VPC_B"
            },
            "tags_all": {
              "Name": "app_server_for_VPC_B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-071fbbc09b1c78aeb"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.security_group_for_VPC_B_instance",
            "aws_subnet.vpc_B_subnet_AZ1",
            "aws_vpc.vpc_B_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server_for_VPC_C_subnet_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0729e439b6769d6ab",
            "arn": "arn:aws:ec2:us-east-1:576516118645:instance/i-0949bc2422968b916",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-0949bc2422968b916",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09cdac7d711b46b66",
            "private_dns": "ip-10-2-0-48.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.48",
            "public_dns": "ec2-52-72-203-149.compute-1.amazonaws.com",
            "public_ip": "52.72.203.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e34a3f4b0d55854e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0629df35026794d7c",
            "tags": {
              "Name": "app_server_for_VPC_C"
            },
            "tags_all": {
              "Name": "app_server_for_VPC_C"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08baaa15fc5afbc81"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.security_group_for_VPC_C_instance",
            "aws_subnet.vpc_C_subnet_AZ1",
            "aws_vpc.vpc_C_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_for_VPC_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:internet-gateway/igw-00ca0bfb69c614fe5",
            "id": "igw-00ca0bfb69c614fe5",
            "owner_id": "576516118645",
            "tags": {
              "Name": "internet_gateway_for_VPC_A"
            },
            "tags_all": {
              "Name": "internet_gateway_for_VPC_A"
            },
            "vpc_id": "vpc-0bbfd845e9251e28d"
          },
          "dependencies": [
            "aws_vpc.vpc_A_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_for_VPC_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:internet-gateway/igw-0405b756c1ffef1ae",
            "id": "igw-0405b756c1ffef1ae",
            "owner_id": "576516118645",
            "tags": {
              "Name": "internet_gateway_for_VPC_B"
            },
            "tags_all": {
              "Name": "internet_gateway_for_VPC_B"
            },
            "vpc_id": "vpc-07b9b3ea823cd1f1a"
          },
          "dependencies": [
            "aws_vpc.vpc_B_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway_for_VPC_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:internet-gateway/igw-07572a2d243124234",
            "id": "igw-07572a2d243124234",
            "owner_id": "576516118645",
            "tags": {
              "Name": "internet_gateway_for_VPC_C"
            },
            "tags_all": {
              "Name": "internet_gateway_for_VPC_C"
            },
            "vpc_id": "vpc-0696defbbecc41619"
          },
          "dependencies": [
            "aws_vpc.vpc_C_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_for_VPC_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:route-table/rtb-0807e428a591e46d2",
            "id": "rtb-0807e428a591e46d2",
            "owner_id": "576516118645",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ca0bfb69c614fe5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_for_VPC_A"
            },
            "tags_all": {
              "Name": "rt_for_VPC_A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbfd845e9251e28d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway_for_VPC_A",
            "aws_vpc.vpc_A_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_for_VPC_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:route-table/rtb-0472d8e141c2b68a3",
            "id": "rtb-0472d8e141c2b68a3",
            "owner_id": "576516118645",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0405b756c1ffef1ae",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_for_VPC_B"
            },
            "tags_all": {
              "Name": "rt_for_VPC_B"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b9b3ea823cd1f1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway_for_VPC_B",
            "aws_vpc.vpc_B_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_for_VPC_C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:route-table/rtb-0c8c6f6fd4457cf73",
            "id": "rtb-0c8c6f6fd4457cf73",
            "owner_id": "576516118645",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07572a2d243124234",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_for_VPC_C"
            },
            "tags_all": {
              "Name": "rt_for_VPC_C"
            },
            "timeouts": null,
            "vpc_id": "vpc-0696defbbecc41619"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway_for_VPC_C",
            "aws_vpc.vpc_C_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_for_VPC_A_subnet_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec58fbb27af8a74d",
            "route_table_id": "rtb-0807e428a591e46d2",
            "subnet_id": "subnet-04e78f22512749e8c"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_for_VPC_A",
            "aws_route_table.rt_for_VPC_A",
            "aws_subnet.vpc_A_subnet_AZ1",
            "aws_vpc.vpc_A_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_for_VPC_A_subnet_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025a24f1b08e3edb4",
            "route_table_id": "rtb-0807e428a591e46d2",
            "subnet_id": "subnet-0ee54c092f92696ee"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_for_VPC_A",
            "aws_route_table.rt_for_VPC_A",
            "aws_subnet.vpc_A_subnet_AZ2",
            "aws_vpc.vpc_A_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_for_VPC_B_subnet_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed7e8751b560bb5a",
            "route_table_id": "rtb-0472d8e141c2b68a3",
            "subnet_id": "subnet-0a902fc05825a506f"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_for_VPC_B",
            "aws_route_table.rt_for_VPC_B",
            "aws_subnet.vpc_B_subnet_AZ1",
            "aws_vpc.vpc_B_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_for_VPC_B_subnet_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0252fe39b220e0512",
            "route_table_id": "rtb-0472d8e141c2b68a3",
            "subnet_id": "subnet-034a902055587fe1e"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_for_VPC_B",
            "aws_route_table.rt_for_VPC_B",
            "aws_subnet.vpc_B_subnet_AZ2",
            "aws_vpc.vpc_B_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_for_VPC_C_subnet_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0152aa98767cca01d",
            "route_table_id": "rtb-0c8c6f6fd4457cf73",
            "subnet_id": "subnet-0629df35026794d7c"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_for_VPC_C",
            "aws_route_table.rt_for_VPC_C",
            "aws_subnet.vpc_C_subnet_AZ1",
            "aws_vpc.vpc_C_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_for_VPC_C_subnet_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b85742a24ed946b",
            "route_table_id": "rtb-0c8c6f6fd4457cf73",
            "subnet_id": "subnet-0e6fc8adf383c3767"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway_for_VPC_C",
            "aws_route_table.rt_for_VPC_C",
            "aws_subnet.vpc_C_subnet_AZ2",
            "aws_vpc.vpc_C_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_for_VPC_A_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:security-group/sg-03ddffcef654a5329",
            "description": "allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ddffcef654a5329",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "allow_web_access",
            "name_prefix": "",
            "owner_id": "576516118645",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2_instance_for_VPC_A_subnet_AZ1"
            },
            "tags_all": {
              "Name": "EC2_instance_for_VPC_A_subnet_AZ1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbfd845e9251e28d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_A_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_for_VPC_B_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:security-group/sg-071fbbc09b1c78aeb",
            "description": "allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071fbbc09b1c78aeb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "allow_web_access",
            "name_prefix": "",
            "owner_id": "576516118645",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2_instance_for_VPC_B_subnet_AZ1"
            },
            "tags_all": {
              "Name": "EC2_instance_for_VPC_B_subnet_AZ1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b9b3ea823cd1f1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_B_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_for_VPC_C_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:security-group/sg-08baaa15fc5afbc81",
            "description": "allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08baaa15fc5afbc81",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "allow_web_access",
            "name_prefix": "",
            "owner_id": "576516118645",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2_instance_for_VPC_C_subnet_AZ1"
            },
            "tags_all": {
              "Name": "EC2_instance_for_VPC_C_subnet_AZ1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0696defbbecc41619"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_C_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_A_subnet_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:subnet/subnet-04e78f22512749e8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e78f22512749e8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576516118645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_A_subnet_AZ1"
            },
            "tags_all": {
              "Name": "vpc_A_subnet_AZ1"
            },
            "vpc_id": "vpc-0bbfd845e9251e28d"
          },
          "dependencies": [
            "aws_vpc.vpc_A_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_A_subnet_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:subnet/subnet-0ee54c092f92696ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee54c092f92696ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576516118645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_A_subnet_AZ2"
            },
            "tags_all": {
              "Name": "vpc_A_subnet_AZ2"
            },
            "vpc_id": "vpc-0bbfd845e9251e28d"
          },
          "dependencies": [
            "aws_vpc.vpc_A_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_B_subnet_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:subnet/subnet-0a902fc05825a506f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a902fc05825a506f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576516118645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_B_subnet_AZ1"
            },
            "tags_all": {
              "Name": "vpc_B_subnet_AZ1"
            },
            "vpc_id": "vpc-07b9b3ea823cd1f1a"
          },
          "dependencies": [
            "aws_vpc.vpc_B_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_B_subnet_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:subnet/subnet-034a902055587fe1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034a902055587fe1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576516118645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_B_subnet_AZ2"
            },
            "tags_all": {
              "Name": "vpc_B_subnet_AZ2"
            },
            "vpc_id": "vpc-07b9b3ea823cd1f1a"
          },
          "dependencies": [
            "aws_vpc.vpc_B_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_C_subnet_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:subnet/subnet-0629df35026794d7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0629df35026794d7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576516118645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_C_subnet_AZ1"
            },
            "tags_all": {
              "Name": "vpc_C_subnet_AZ1"
            },
            "vpc_id": "vpc-0696defbbecc41619"
          },
          "dependencies": [
            "aws_vpc.vpc_C_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_C_subnet_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:subnet/subnet-0e6fc8adf383c3767",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6fc8adf383c3767",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "576516118645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_C_subnet_AZ2"
            },
            "tags_all": {
              "Name": "vpc_C_subnet_AZ2"
            },
            "vpc_id": "vpc-0696defbbecc41619"
          },
          "dependencies": [
            "aws_vpc.vpc_C_cidr",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_A_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:vpc/vpc-0bbfd845e9251e28d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00e04be51123c7b4c",
            "default_route_table_id": "rtb-0d57a07398e714412",
            "default_security_group_id": "sg-06f21e72fe856f01d",
            "dhcp_options_id": "dopt-066ff980d4f2b7316",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bbfd845e9251e28d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d57a07398e714412",
            "owner_id": "576516118645",
            "tags": {
              "Name": "vpc A"
            },
            "tags_all": {
              "Name": "vpc A"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_B_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:vpc/vpc-07b9b3ea823cd1f1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d116f8d456d1e6d8",
            "default_route_table_id": "rtb-03f5a52bbe02ffbdb",
            "default_security_group_id": "sg-0f723651eb0431e3f",
            "dhcp_options_id": "dopt-066ff980d4f2b7316",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07b9b3ea823cd1f1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f5a52bbe02ffbdb",
            "owner_id": "576516118645",
            "tags": {
              "Name": "vpc B"
            },
            "tags_all": {
              "Name": "vpc B"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_C_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:576516118645:vpc/vpc-0696defbbecc41619",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-06a8185717834610a",
            "default_route_table_id": "rtb-0cd2e29e48245e06e",
            "default_security_group_id": "sg-0c719944c1d8068ae",
            "dhcp_options_id": "dopt-066ff980d4f2b7316",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0696defbbecc41619",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd2e29e48245e06e",
            "owner_id": "576516118645",
            "tags": {
              "Name": "vpc C"
            },
            "tags_all": {
              "Name": "vpc C"
            }
          }
        }
      ]
    }
  ]
}